added the drawing functions

--- a/2_read_write_video.ipynb
+++ b/2_read_write_video.ipynb
@@ -44,10 +44,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fourcc = cv2.VideoWriter_fourcc('M','P','E','G') #initialise the codec XVID , MPEG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "640.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cap.get(3) #get the width of the frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "480.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cap.get(4) #get the height of the frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = cv2.VideoWriter('output.avi',fourcc,25,(640,480)) # initialise the writer with outputfile name, frame rate, and frame size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "while(True):\n",
     "    ret, frame = cap.read()\n",
     "    if(ret == True):\n",
+    "        #new_frame = cv2.cvtColor(frame,cv2.COLOR_BGR2GRAY)\n",
     "        cv2.imshow('live_video',frame)\n",
+    "        out.write(frame)   #write the frame to the video, always the frame should of of size of input and in BGR only\n",
     "        if cv2.waitKey(1) & 0xFF == ord('q'):  #if key pressed is 'q' then exit  else read the next frame\n",
     "            break\n",
     "        \n",
@@ -57,11 +124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "cap.release()# release the resource\n",
+    "out.release()\n",
     "cv2.destroyAllWindows() #destroy all the windows"
    ]
   },
