--- a/8_performance_measurement.ipynb
+++ b/8_performance_measurement.ipynb
@@ -182,7 +182,7 @@
     }
    ],
    "source": [
-    "cv2.setUseOptimized(True) #twice faster than Fa\n",
+    "cv2.setUseOptimized(True) #twice faster than False\n",
     "cv2.useOptimized()"
    ]
   },
